# generator-cosmodummy

./: .gitignore  README.md  index.js  package.json
generators/app/: index.js
generators/app/templates/: CMakeLists.txt  DummyApp.cpp  DummyApp.h
generators/app/templates/dummy/CppProject/: DummyApp.cpp  DummyApp.h
generators/class/: index.js
generators/class/templates/: DummyApp.cpp  DummyApp.h
generators/class/templates/include/: MyClass.h
generators/class/templates/src/: MyClass.cpp
travis/: yo_cpp  yo_cpp_class
